--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>Arvin Dave Calio</title>
   <link rel="stylesheet" href="style.css"> <!-- CSS file -->
   <style>
     /* ==== Global Styles ==== */
@@ -274,3 +274,4 @@
   </script>
 </body>
 </html>
+
