--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
       scroll-behavior: smooth;
     }
     body {
-      font-family: "Segoe UI", sans-serif;
-      background: #f5f6fa;
-      color: #2c3e50;
-      line-height: 1.6;
-    }
+  font-family: "Segoe UI", sans-serif;
+  background: url("background.jpg") no-repeat center center fixed;
+  background-size: cover;
+  color: #2c3e50;
+  line-height: 1.6;
+}
     h1, h2, h3 {
       font-weight: 700;
       color: #2c3e50;
@@ -64,7 +65,6 @@
     /* ==== Hero Section ==== */
     header {
       height: 100vh;
-      background: linear-gradient(to right, #1abc9c, #16a085);
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -77,7 +77,7 @@
       width: 160px;
       height: 160px;
       border-radius: 50%;
-      border: 5px solid #fff;
+      border: 5px solid rgba(44, 62, 80, 0.95);
       margin-bottom: 1.5rem;
       box-shadow: 0 6px 12px rgba(0,0,0,0.3);
       object-fit: cover;
@@ -90,6 +90,7 @@
       font-size: 1.2rem;
       max-width: 600px;
     }
+
 
     /* ==== Section Styling ==== */
     section {
@@ -177,12 +178,20 @@
   <a href="#contact">Contact</a>
 </nav>
 
-  <!-- Hero Section -->
-  <header>
+  <!-- Hero Section with Video Background -->
+<header>
+  <video autoplay muted loop id="bgVideo">
+    <source src="background.mp4" type="video/mp4">
+  </video>
+  <div class="hero-content">
     <img src="your-photo.jpg" alt="My Photo">
     <h1>Arvin Dave Calio</h1>
     <p>IT Student | Creator</p>
-  </header>
+  </div>
+</header>
+
+<!-- Line Divider -->
+<hr class="section-divider">
 
   <!-- About Section -->
   <section id="about" class="about hidden">
