--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   <div class="hero-content">
     <img src="your-photo.jpg" alt="My Photo">
     <h1>Arvin Dave Calio</h1>
-    <p>IT Student | Creator</p>
+    <p class="tagline">IT Student | Creator</p>
   </div>
 </header>
 
@@ -300,3 +300,4 @@
   </script>
 </body>
 </html>
+
