--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   </div>
   <!-- Dropdown Menu -->
   <div class="dropdown" id="dropdownMenu">
-    <a href="#">Help</a>
+    <a href="fb-messenger://user-thread/arvindavecalio">Help</a>
   </div>
 </nav>
 
@@ -322,3 +322,4 @@
 </script>
 </body>
 </html>
+
