--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   </div>
   <!-- Dropdown Menu -->
   <div class="dropdown" id="dropdownMenu">
-    <a href="fb-messenger://user-thread/arvindavecalio">Help</a>
+    <a href="https://m.me/arvindavecalio?text=Hello" target="_blank">Help</a>
   </div>
 </nav>
 
@@ -322,4 +322,5 @@
 </script>
 </body>
 </html>
+
 
